--- a/views/auth/changepassword.ejs
+++ b/views/auth/changepassword.ejs
@@ -1,18 +1,16 @@
 <%- include("../partials/header.ejs") %>
 
-<div class="main" style="height: 100%">
-    <div class="mid" style="width: 96%; height:100%;">
-        <div class="common-home-right" style="margin: 50px auto;">
-            <form action="/change" method="post" style="background-color: transparent;">
-                <div class="local" style="margin: 50px auto;">
+<div class="main">
+    <div class="update-form">
+        <form action="/change" method="post">
+                <!-- <div class="local"> -->
                     <h2>Change Password</h2>
                     <input type="email" name="username" placeholder="Email*" required>
                     <input type="password" name="newpassword" placeholder="New password*" required>
-                    <p style="color: red; background-color: transparent;"><%= message %></p>
-                    <button class="btn" type="submit">Change</button>
-                </div>
+                    <p style="color: red; font-size: 1.5rem; margin: auto;"><%= message %></p>
+                    <button type="submit">Change</button>
+                <!-- </div> -->
             </form>
-        </div>
     </div>
 </div>
 
