--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,11 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="js/nav.js" defer></script>
 </head>
 <body>
     <div class="header">
-        <form action="/" method="get">
+        <form action="/" method="get" class="form-btn">
             <button class="btn">Home</button>
         </form>
-        <h1>MY DSA</h1>
+        <div class="main-logo">
+            <h1>MY</h1>
+            <h1>DSA</h1>
+        </div>
     </div>
