--- a/views/removequestion.ejs
+++ b/views/removequestion.ejs
@@ -1,22 +1,21 @@
 <%- include("partials/header.ejs") %> 
 
-    <div class="main">
+    <div class="main" style="display: flex; flex-direction: column;">
         <div class="topic-title">
-        <h2 style="color: black"><%= _.capitalize(topicData.topicname) %></h2>
+            <h2><%= _.capitalize(topicData.topicname) %></h2>
         </div>
-        <form action="/deletequestion" method="post" style="width: 65%; margin:10px auto; background-color: transparent;">
-            <input type="text" style="visibility: hidden;" name="rqi" value="<%= topicData.topicname %>"></input>
+        <div class="remove-topic-list"> 
+        <form action="/deletequestion" method="post">
+            <input type="text" style="visibility: hidden; height: 0; display: none;" name="rqi" value="<%= topicData.topicname %>"></input>
             <% topicData.content.forEach(function(item){ %>
-                <div class="rem-ques">
-                    <div style="width: 10%"><%= i %><% i++ %></div>
-                    <div style="width: 70%;"><%= item.qname %></div>
-                    <div style="width: 20%; float: right;">
-                    <button class="btn" style="width: 100px; color: white(129, 0, 0); position: relative; right:0" name="qname" value="<%= item.qname%>">Remove   
-                    </button></div>
-                    <br>
+                <div class="remove-question-set" style="margin: 2rem auto;">
+                    <div><%= item.qname %></div>
+                    <button style="border-radius: 14px;" name="qname" value="<%= item.qname%>">Remove   
+                    </button>
                 </div>
             <% }) %>
         </form>
+        </div>
     </div>
 
 <%- include("partials/footer.ejs") %>
