--- a/views/topicwiselist.ejs
+++ b/views/topicwiselist.ejs
@@ -1,30 +1,37 @@
 <%- include("partials/header.ejs") %> 
 
-    <div class="main">
-        <div class="topic-title">
-            <form action="/addquestion" method="post">
-                <button name="addq" value="<%= topicData.topicname %>" class="btn">Add</button>
-            </form>
+<div class="main">
+    <div class="question-list-title">
+        <div class="question-topic-title">
             <h2><%= _.upperCase(topicData.topicname) %> (<%= topicData.content.length%>)</h2>
-            <form action="/removequestion" method="post">
-                <button name="rqb" value="<%= topicData.topicname %>" class="btn">Remove</button>
-            </form>
+            <div class="question-buttons">
+                <form action="/addquestion" method="post">
+                    <button class="question-button-1" name="addq" value="<%= topicData.topicname %>">Add</button>
+                </form>
+            
+                <form action="/removequestion" method="post">
+                    <button class="question-button-2" name="rqb" value="<%= topicData.topicname %>">Remove</button>
+                </form>
             </div>
-        <table>
-            <tr>
-                <th style="width: 10%; border-radius: 30px 0px 0px 30px;">sl no</th>
-                <th style="width: 80%;">q name</th>
-                <th style="width: 10%; border-radius: 0px 30px 0px 30px;"><div style=" width: 400px; float: right; overflow: hidden;">link</div></th>
-            </tr>
-            <% topicData.content.forEach(function(item){ %>
+        </div>
+        <!-- <div class="question-table"> -->
+            <table>
                 <tr>
-                    <td style="border-radius: 30px 0px 0px 30px;"><%= i %><% i++ %></td>
-                    <td><%= item.qname %></td>
-                    <td style="border-radius: 0px 30px 0px 30px;"><div style="width: 400px; overflow: hidden; "><a href="<%= item.link %>"><%= item.link %></a></div></td>
+                    <th style="width: 20%;">sl no</th>
+                    <th>q name</th>
+                    <th style="width: 20%">link</th>
                 </tr>
-            <%})%>
-        </table>
-    </div>
+                <% topicData.content.forEach(function(item){ %>
+                    <tr>
+                        <td style="width: 20%"><%= i %><% i++ %></td>
+                        <td><%= item.qname %></td>
+                        <td class="link" style="width: 20%;"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';">url</a></td>
+                    </tr>
+                <%})%>
+            </table>
+        <!-- </div> -->
+    </div>    
+</div>
 
 
 <%- include("partials/footer.ejs") %>
