--- a/views/userhome.ejs
+++ b/views/userhome.ejs
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="major-topic-dropdown">
-        <button class="dropbtn">Topics</button>
+        <button class="dropbtn">TTopics</button>
         <div class="dropdown-content">
           <% suggestedTopic.forEach(function(item){ %>
             <form action="/addtopicbysuggestion" method="post">
