--- a/views/userhome.ejs
+++ b/views/userhome.ejs
@@ -6,6 +6,9 @@
     <div data-visible="false" class="menu user-details h-class">
         <div class="greet">Hello <%= _.capitalize(nameOfUser.split(/\s/)[0]) %></div>
         <div class="user-actions">
+            <form action="/practice" method="post">
+                <button style="background-color: rgb(41 17 144); border: 1px red groove;" class="btn"><span style="color: red;">!!!</span>&nbsp;PRACTICE&nbsp;<span style="color: red;">!!!</span></button>
+            </form>
             <form action="/profilestats" method="get">
                 <button style="background-color: rgb(0, 101, 134);" class="btn">Profile stats</button>
             </form>
