--- a/views/addquestion.ejs
+++ b/views/addquestion.ejs
@@ -6,6 +6,7 @@
             <h2><%= _.upperCase(topicname) %></h2>
                 <input type="text" placeholder="Enter question name" name="questionName">
                 <input type="text" placeholder="Enter the question link" name="questionLink">
+                <input type="text" placeholder="Enter the doc link" name="docLink">
                 <button name="nqb" value="<%= topicname%>" class="btn">Add</button>
             </form>
         </div>
