--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,12 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+    <link rel="stylesheet" href="/css/font-awesome/css/fontawesome.min.css">
+
+    <style>
+   
+    </style>
 
 </head>
 <body>
     <div class="header">
         <form action="/" method="get" class="form-btn">
-            <button class="btn" style="color: white;">Home</button>
+            <button class="btn">Home</button>
         </form>
         <div class="main-logo">
             <h1>MY</h1>
