--- a/views/commonhome.ejs
+++ b/views/commonhome.ejs
@@ -2,7 +2,6 @@
 
 <%- include("partials/header.ejs") %> 
 
-
 <div class="common-home-main">
     <div class="common-home-left">
         <div class="common-home-left-inner">
@@ -21,7 +20,14 @@
                 <h2>Sign Up</h2>
                 <input type="text" name="name" placeholder="Name*" required>
                 <input type="email" name="email" placeholder="Email*" required>
-                <input type="password" name="password" placeholder="Password*" required>
+                <input type="password" name="password" id="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Password*" required>
+                <div id="message" style="color: black; font-weight: 600; background-color: transparent; margin-top: 0px; font-size: 0.2rem;">
+                    <h3>Password must contain the following:</h3>
+                    <nav id="letter" class="invalid appr">A lowercase letter</nav>
+                    <nav id="capital" class="invalid appr">A capital (uppercase) letter</nav>
+                    <nav id="number" class="invalid appr">A number</nav>
+                    <nav id="length" class="invalid appr">Minimum 6 characters</nav>
+                </div>
                 <button class="btn" type="submit">Create your account</button>
             </div>
         </form>
@@ -33,16 +39,19 @@
                 <button>Sign up with google</button>
                 </div>
             </form>
-            <form action="/auth/github" method="get">
+            <!-- <form action="/auth/github" method="get">
                 <h3>or</h3>
                 <div class="github-btn open-btn">
                 <image id="icons" src="/images/git.png" style="border-right: 1px solid white;" alt=" "></image>
                 <button>Sign up with github</button>
                 </div>
-            </form>
+            </form> -->
                 <form action="/auth/local">
                     <button class="sign-in">sign in</button>
                 </form>
+                <!-- <form action="/otpsent">
+                    <button class="sign-in">sign in</button>
+                </form> -->
 
         </div>
     </div>
@@ -50,23 +59,91 @@
 
 <div class="main-feature-section">
 <div class="features">
-    <div class="feature-title">feature one</div>
-    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut molestiae voluptatibus officia sapiente fugit ex omnis quos dolorum voluptate aperiam.</p>
+    <div class="feature-title"><span style="color: red">C</span>ategory</div>
+    <p class="feature-content">Allow users to categorize questions based on topics (Arrays, Linked lists, Trees, Graphs, etc.) and add their corresponding link and article to further practice.</p>
 </div>
 <div class="features">
-    <div class="feature-title">feature one</div>
-    <p class="feature-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aliquid voluptatum optio placeat, at ut neque excepturi adipisci magnam dolores.</p>
+    <div class="feature-title"><span style="color: red">R</span>andom Practice</div>
+    <p class="feature-content">A practice section is over there in the profile for user to practice any of four random questions from their profile for better revision.</p>
+</div>
+<div class="features">
+    <div class="feature-title"><span style="color: red">C</span>ustom notes</div>
+    <p class="feature-content">Allow users to add custom notes to each question, helping them note down key insights, hints, or explanations according to their convenience.</p>
+</div>
+<div class="features">
+    <div class="feature-title"><span style="color: red">P</span>rofile strength</div>
+    <p class="feature-content">There is a profile section which shows the strength on the basis of number of questions added to improtant topics so that any important topic is not missing.</p>
 </div>
 <div class="features">
     <div class="feature-title">features adding soon</div>
     <p class="feature-content">
         <ul>
-            <li>best resources for little important concepts</li>
-            <li>complete dsa study plan(only need theory like notes(pointwise))</li>
-            <li>practice questions set topicwise easy, medium and hard</li>
+            <li>A practice of the day section will be added with a single question</li>
+            <li>Notification will be added about differnt coding sites contest like Leetcode, codeforces etc.</li>
+            <li>Notes for major core topics like OS, DBMS, OPPs and Networking will be added.</li>
         </ul>
     </p>
 </div>
 </div>
+
+<script>
+    var myInput = document.getElementById("psw");
+    var letter = document.getElementById("letter");
+    var capital = document.getElementById("capital");
+    var number = document.getElementById("number");
+    var length = document.getElementById("length");
+    
+    // When the user clicks on the password field, show the message box
+    myInput.onfocus = function() {
+      document.getElementById("message").style.display = "block";
+    }
+    
+    // When the user clicks outside of the password field, hide the message box
+    myInput.onblur = function() {
+      document.getElementById("message").style.display = "none";
+    }
+    
+    // When the user starts to type something inside the password field
+    myInput.onkeyup = function() {
+      // Validate lowercase letters
+      var lowerCaseLetters = /[a-z]/g;
+      if(myInput.value.match(lowerCaseLetters)) {
+        letter.classList.remove("invalid");
+        letter.classList.add("valid");
+      } else {
+        letter.classList.remove("valid");
+        letter.classList.add("invalid");
+    }
+    
+      // Validate capital letters
+      var upperCaseLetters = /[A-Z]/g;
+      if(myInput.value.match(upperCaseLetters)) {
+        capital.classList.remove("invalid");
+        capital.classList.add("valid");
+      } else {
+        capital.classList.remove("valid");
+        capital.classList.add("invalid");
+      }
+    
+      // Validate numbers
+      var numbers = /[0-9]/g;
+      if(myInput.value.match(numbers)) {
+        number.classList.remove("invalid");
+        number.classList.add("valid");
+      } else {
+        number.classList.remove("valid");
+        number.classList.add("invalid");
+      }
+    
+      // Validate length
+      if(myInput.value.length >= 6) {
+        length.classList.remove("invalid");
+        length.classList.add("valid");
+      } else {
+        length.classList.remove("valid");
+        length.classList.add("invalid");
+      }
+    }
+</script>
 
 <%- include("partials/footer.ejs") %>
