--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,5 +3,15 @@
 <div class="footer">
     <p>Copyright 2000-2023</p>
 </div>
+
+<!-- ========== BOOTSTRAP JS FILES ====================== -->
+
+<script src="/styles/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="../js/ajax.js"></script>
+<script src="/styles/mdb/mdb.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+<!-- ========== ! BOOTSTRAP JS FILES ==================== -->
+
 </body>
 </html>
