Ready for deployment

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,7 +9,7 @@
                     <input type="password" name="password" placeholder="Password*">
                     <p class="flash" style="color: red; text-align: center; height: 5px;"><%= message %></p>
                     <button class="btn" type="submit">Log In</button>
-                    <a href="/resetpassword">forget password?</a>
+                    <!-- <a href="/resetpassword">forget password?</a> -->
             </form>
         </div>
 </div>
