--- a/views/commonhome.ejs
+++ b/views/commonhome.ejs
@@ -22,7 +22,7 @@
                 <input type="email" name="email" placeholder="Email*" required>
                 <input type="password" name="password" id="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Password*" required>
                 <div id="message" style="color: black; font-weight: 600; background-color: transparent; margin-top: 0px; font-size: 0.2rem;">
-                    <h3>Password must contain the following:</h3>
+                    <h3 style="color: black; font-size: 1.3rem;">Password must contain the following:</h3>
                     <nav id="letter" class="invalid appr">A lowercase letter</nav>
                     <nav id="capital" class="invalid appr">A capital (uppercase) letter</nav>
                     <nav id="number" class="invalid appr">A number</nav>
