--- a/views/auth/resetpassword.ejs
+++ b/views/auth/resetpassword.ejs
@@ -5,7 +5,7 @@
             <form action="/reset" method="post">
                     <h2>Reset Password</h2>
                     <input type="email" name="username" placeholder="Email*" required>
-                    <input type="password" name="password" placeholder="New password*" required>
+                    <input type="password" name="newpassword" placeholder="New password*" required>
                     <input type="password" name="confirmpassword" placeholder="Confirm password*" required>
                     <p style="color: red; font-size: 1.5rem; margin: auto;"><%= message %></p>
                     <button class="btn" type="submit">Reset</button>
