--- a/views/otpsent.ejs
+++ b/views/otpsent.ejs
@@ -93,6 +93,7 @@
                 </div>
                 
                 <input type="hidden" name="userEmail" value="<%= userEmail %>">
+                <input type="hidden" name="newPassword" value="<%= newpassword %>">
               </form>
             </div>
             <!-- <div class="" style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
