navbar responsiveness updated

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="/css/font-awesome/css/fontawesome.min.css">
-
-    <style>
-   
-    </style>
+    <script src="/js/nav.js" defer></script>
 
 </head>
 <body>
