--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
 </div>
 
 <!-- ========== BOOTSTRAP JS FILES ====================== -->
-
+<script src="/js/nav.js"></script>
 <script src="/styles/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="../js/ajax.js"></script>
 <script src="/styles/mdb/mdb.min.js"></script>
