--- a/views/topicwiselist.ejs
+++ b/views/topicwiselist.ejs
@@ -17,19 +17,19 @@
         <!-- <div class="question-table"> -->
             <table>
                 <tr>
-                    <th style="width: 20%;">sl no</th>
-                    <th>q name</th>
-                    <th style="width: 20%">link</th>
-                    <th style="width: 20%">Articles</th>
-                    <th style="width: 20%">Notes</th>
+                    <th style="width: 10%;">sl no</th>
+                    <th>Question name</th>
+                    <th style="width: 10%">link</th>
+                    <!-- <th style="width: 20%">Articles</th> -->
+                    <th style="width: 10%">Notes</th>
                 </tr>
                 <%var k = 0; topicData.content.forEach(function(item){ %>
                     <tr>
-                        <td style="width: 20%"><%= i %><% i++ %></td>
+                        <td><%= i %><% i++ %></td>
                         <td><%= item.qname %></td>
-                        <td class="link" style="width: 20%;"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';">url</a></td>
-                        <td class="link" style="width: 20%;"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';">url</a></td>
-                        <td class="link" style="width: 20%;"><a href="/addnote/<%=topicData.id%><%= k %>"role="button"><i class="fa-solid fa-note-sticky"></i></a></td>
+                        <td class="link"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';"><i class="fa-solid fa-link link"></i></a></td>
+                        <!-- <td class="link" style="width: 20%;"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';">url</a></td> -->
+                        <td class="link"><a href="/addnote/<%=topicData.id%><%= k %>"role="button"><i class="fa-solid fa-note-sticky link"></i></a></td>
                     </tr>
                     <% k++ %>
                 <%})%>
