--- a/views/topicwiselist.ejs
+++ b/views/topicwiselist.ejs
@@ -23,13 +23,28 @@
                     <!-- <th style="width: 20%">Articles</th> -->
                     <th style="width: 10%">Notes</th>
                 </tr>
+                <%
+                    var colorArray = ['#FF6633', '#FFB399', '#FF33FF', '#FFFF99', '#00B3E6', 
+                                    '#E6B333', '#3366E6', '#999966', '#99FF99', '#B34D4D',
+                                    '#80B300', '#809900', '#E6B3B3', '#6680B3', '#66991A', 
+                                    '#FF99E6', '#CCFF1A', '#FF1A66', '#E6331A', '#33FFCC',
+                                    '#66994D', '#B366CC', '#4D8000', '#B33300', '#CC80CC', 
+                                    '#66664D', '#991AFF', '#E666FF', '#4DB3FF', '#1AB399',
+                                    '#E666B3', '#33991A', '#CC9999', '#B3B31A', '#00E680', 
+                                    '#4D8066', '#809980', '#E6FF80', '#1AFF33', '#999933',
+                                    '#FF3380', '#CCCC00', '#66E64D', '#4D80CC', '#9900B3', 
+                                    '#E64D66', '#4DB380', '#FF4D4D', '#99E6E6', '#6666FF'];
+                %>
                 <%var k = 0; topicData.content.forEach(function(item){ %>
                     <tr>
                         <td><%= i %><% i++ %></td>
                         <td><%= item.qname %></td>
                         <td class="link"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';"><i class="fa-solid fa-link link"></i></a></td>
                         <!-- <td class="link" style="width: 20%;"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';">url</a></td> -->
-                        <td class="link"><a href="/addnote/<%=topicData.id%><%= k %>"role="button"><i class="fa-solid fa-note-sticky link"></i></a></td>
+                        <%
+                            var colorIndex = Math.floor(Math.random()*50);
+                        %>
+                        <td class="link"><a href="/addnote/<%=topicData.id%><%= k %>"role="button"><i class="fa-solid fa-note-sticky link" style="color: <%= colorArray[colorIndex]%>"></i></a></td>
                     </tr>
                     <% k++ %>
                 <%})%>
