--- a/views/topicwiselist.ejs
+++ b/views/topicwiselist.ejs
@@ -38,7 +38,7 @@
                 <%var k = 0; topicData.content.forEach(function(item){ %>
                     <tr>
                         <td><%= i %><% i++ %></td>
-                        <td><%= item.qname %></td>
+                        <td style="text-align: left; padding-left: 5px;"><%= item.qname %></td>
                         <td class="link"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';"><i class="fa-solid fa-link link"></i></a></td>
                         <!-- <td class="link" style="width: 20%;"><a href="<%= item.link %>" onClick="window.location.href='<%= item.link %>';">url</a></td> -->
                         <%
